Highlight fixes, plan_start_path fix, header css fixes, tweak reading plan mode widget.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -511,7 +511,7 @@ en:
     which day in plan:                          "Day %{day} of %{total}"
     must start to complete:                     "Start this plan to save completed readings!"
     invalid reference:                          "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
-    sidebar notice:                             "You Are in Reading Plan View."
+    sidebar notice:                             "You are viewing a reading plan."
   registration:
     placeholder:
       email:                                    "Enter your email address"
