--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -487,8 +487,6 @@ en:
     devotional:                                 "Devotional"
     completion status _ below percentage:       "Complete"
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
-    started:                                    "Started"
-    ends:                                       "Ends"
     start date _ before date string:            "Start Date:"
     end date _ before date string:              "End Date:"
     are you behind:                             "Falling a bit behind?"
@@ -621,7 +619,7 @@ en:
     bible dot com title:                        "What happened to the old Bible.com?"
     bible dot com copy:                         "If you are looking for the Christ Unlimited Ministries content by Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
-    title:                                      "Press"
+    title:                                      "Press Area"
     contact header:                             "Press Contact Information"
     contact header 2:                           "Around The Web"
     phone:                                      "Phone"
@@ -707,7 +705,7 @@ en:
         font2:                                  "Georgia"
         font3:                                  "Baskerville"
         font4:                                  "Verdana"
-        font size:                              "Size:"
+        font size:                              "Font Size:"
         small:                                  "Small"
         medium:                                 "Medium"
         large:                                  "Large"
