--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,8 +98,13 @@ en:
   search:                                       "Search"
   book:                                         "Book"
   filter book:                                  "Filter Books..."
+  save:                                         "Save"
+  cancel:                                       "Cancel"
   try the beta:                                 "Try the Beta"
   welcome to the beta:                          "Welcome to the new YouVersion.com!"
+  highlight:                                    "Highlight Verse"
+  comment:                                      "New Comment"
+  note:                                         "New Note"
   selected:                                     "Selected"
   chapter:                                      "Chapter"
   bible:                                        "Bible"
@@ -189,6 +194,8 @@ en:
   users:
     unverified heading:                         "Almost Done!"
     unverified message:                         "It looks like you're trying to sign in to an account that hasn't been set up completely. You only have one more step: simply click on the verification link in the confirmation email you received from YouVersion. Can't find it? Check your spam folder or <a href='%{resend_path}'>resend the confirmation email</a>."
+    not following you:                          "Is not following you"
+    following you:                              "Is following you"
     reset connection:                           "Sorry, an error has occurred. Please remove and then reconnect this connection."
     settings:                                   "Settings"
     no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
@@ -220,6 +227,7 @@ en:
     my profile:                                 "My Profile"
     edit profile:                               "Edit Profile"
     update profile:                             "Update Profile"
+    other user profile:                         "%{username}'s Profile"
     my password:                                "Change My Password"
     edit password:                              "Change Password"
     picture:                                    "Picture"
@@ -388,6 +396,7 @@ en:
       publishing partners:                      "Keep me updated on news from YouVersion's content partners."
       update:                                   "Update Notifications"
   bookmarks:
+    new:                                        "New Bookmark"
     edit:                                       "Edit"
     delete:                                     "Delete this Bookmark"
     title field:                                "Title"
@@ -445,6 +454,7 @@ en:
     you have no plans:                          "You're not subscribed to any reading plans right now."
     no public plans:                            "No reading plans are visible for %{username}."
     filter by lang:                             "Filter Plans by Language"
+    plan settings:                              "Plan Settings"
     settings:                                   "Settings"
     search:                                     "Search"
     search placeholder:                         "Search %{category} Plans"
@@ -462,7 +472,7 @@ en:
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
     start date _ before date string:            "Start Date:"
     end date _ before date string:              "End Date:"
-    are you behind:                             "Ahead of schedule or falling behind?"
+    are you behind:                             "Falling a bit behind?"
     do you want to reset:                       "Want a do-over?"
     catch up text:                              "Shift today's reading to your last completed reading (day %{last_completed_day} of the plan)."
     catch up description only:                  "If you ever fall behind on your readings, don't worry! You can always shift the current reading back to your last completed reading."
@@ -508,6 +518,7 @@ en:
     catch up successful:                        "Success! You are now caught up on your reading."
     restart successful:                         "Your Plan has restarted from the beginning."
     subscribe successful:                       "Great! You're subscribed to this plan."
+    day number:                                 "Day %{day}"
     which day in plan:                          "Day %{day} of %{total}"
     must start to complete:                     "Start this plan to save completed readings!"
     invalid reference:                          "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
@@ -532,6 +543,7 @@ en:
     chapter only:                               "Sorry, audio isn't available for verses. View in the reader for chapter audio."
     close player menu:                          "Close"
   highlights:
+    choose color:                               "Choose Color"
     creation error:                             "Sorry, couldn't highlight."
     delete error:                               "Sorry, couldn't remove highlighting."
   searching:
@@ -678,6 +690,7 @@ en:
         medium:                                 "Medium"
         large:                                  "Large"
         highlights:                             "Highlights"
+        contrast:                               "Contrast"
         on:                                     "On"
         off:                                    "Off"
         extras:                                 "Extras:"
@@ -691,6 +704,7 @@ en:
     try again:                                  "Try Again"
   versions:
     filter:                                     "Filter Versions..."
+    see all:                                    "See All Versions..."
     courtesy of:                                "%{abbreviation} brought to you by %{publisher}"
     learn more:                                 "Learn More"
     index title:                                "Available Versions"
